Ensure html and body both stretch to use the whole page
This was required when adding the defer attribute to the script tags

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   height: 100%;
   margin: 0;
   padding: 0;
